Added StudentServices.cs, IStudentServices.cs, StaffServices.cs and many more

--- a/SchoolERP.Services/SchoolERP.Services.csproj
+++ b/SchoolERP.Services/SchoolERP.Services.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\SchoolERP.Domain\SchoolERP.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
