--- a/SchoolERP.API/SchoolERP.API.csproj
+++ b/SchoolERP.API/SchoolERP.API.csproj
@@ -11,7 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Controllers" />
+      <ProjectReference Include="..\SchoolERP.Services\SchoolERP.Services.csproj" />
     </ItemGroup>
 
 </Project>
