--- a/SchoolERP.Persistent/SchoolERP.Persistent.csproj
+++ b/SchoolERP.Persistent/SchoolERP.Persistent.csproj
@@ -21,4 +21,8 @@
       </PackageReference>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\SchoolERP.Domain\SchoolERP.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
