--- a/SchoolERP.Services/SchoolERP.Services.csproj
+++ b/SchoolERP.Services/SchoolERP.Services.csproj
@@ -8,6 +8,11 @@
 
     <ItemGroup>
       <ProjectReference Include="..\SchoolERP.Domain\SchoolERP.Domain.csproj" />
+      <ProjectReference Include="..\SchoolERP.Persistent\SchoolERP.Persistent.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.2" />
     </ItemGroup>
 
 </Project>
