--- a/SchoolERP.API/SchoolERP.API.csproj
+++ b/SchoolERP.API/SchoolERP.API.csproj
@@ -7,6 +7,9 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="NLog" Version="5.1.0" />
+        <PackageReference Include="NLog.Extensions.Logging" Version="5.2.0" />
+        <PackageReference Include="NLog.Schema" Version="5.1.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     </ItemGroup>
 
