added an interface for generic repository, Parent module

--- a/SchoolERP.API/appsettings.json
+++ b/SchoolERP.API/appsettings.json
@@ -1,9 +1,6 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ScherpDbContext": "Server=.\\;Database=SchERPDatabase;Trusted_connection=true",
+  }
 }
