--- a/SchoolERP.API/SchoolERP.API.csproj
+++ b/SchoolERP.API/SchoolERP.API.csproj
@@ -7,14 +7,21 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="AutoMapper" Version="12.0.0" />
+        <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
         <PackageReference Include="NLog" Version="5.1.0" />
         <PackageReference Include="NLog.Extensions.Logging" Version="5.2.0" />
         <PackageReference Include="NLog.Schema" Version="5.1.0" />
+        <PackageReference Include="NLog.Web.AspNetCore" Version="5.2.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\SchoolERP.Services\SchoolERP.Services.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Helpers" />
     </ItemGroup>
 
 </Project>
