--- a/SchoolERP.Persistent/SchoolERP.Persistent.csproj
+++ b/SchoolERP.Persistent/SchoolERP.Persistent.csproj
@@ -7,6 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="AutoMapper" Version="12.0.0" />
+      <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
       <PackageReference Include="EntityFrameworkCore.Exceptions.SqlServer" Version="6.0.3.1" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.11" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="6.0.11" />
@@ -24,5 +26,6 @@
     <ItemGroup>
       <ProjectReference Include="..\SchoolERP.Domain\SchoolERP.Domain.csproj" />
     </ItemGroup>
+
 
 </Project>
